<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue"
    android:orientation="vertical"
    android:paddingStart="@dimen/Screen_start_padding"
    android:paddingEnd="@dimen/Screen_end_padding"
    tools:context=".ui.fragments.landing.LandingFragment">

    <ImageView
        android:id="@+id/ivDesignHouse"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_15sdp"
        android:src="@drawable/ic_design_house"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nova_round"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintStart_toStartOf="@id/ivDesignHouse"
        app:layout_constraintEnd_toEndOf="@id/ivDesignHouse"
        app:layout_constraintTop_toBottomOf="@id/ivDesignHouse" />

    <TextView
        android:id="@+id/tvSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nova_round"
        android:text="@string/app_slogan"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@id/tvHeading"
        app:layout_constraintEnd_toEndOf="@id/tvHeading"
        app:layout_constraintTop_toBottomOf="@id/tvHeading" />


    <TextView
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_right_arrow_white"
        android:focusable="true"
        android:fontFamily="@font/mulish_bold"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/Button_Padding_Start"
        android:paddingEnd="@dimen/Button_Padding_End"
        android:text="@string/signin"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/Button_Text_Size"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintBottom_toTopOf="@id/btnSignUp"
        app:layout_constraintTop_toBottomOf="@id/tvSlogan" />

    <TextView
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:drawableEnd="@drawable/ic_right_arrow_white"
        android:focusable="true"
        android:fontFamily="@font/mulish_bold"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/Button_Padding_Start"
        android:paddingEnd="@dimen/Button_Padding_End"
        android:text="@string/signup"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/Button_Text_Size"
        app:layout_constraintStart_toStartOf="@id/btnSignIn"
        app:layout_constraintEnd_toEndOf="@id/btnSignIn"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

    <TextView
        android:id="@+id/tvapply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mulish_semibold"
        android:text="@string/apply_to_work"
        android:textColor="@color/bluish_white"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintStart_toStartOf="@id/btnSignUp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp"/>
</androidx.constraintlayout.widget.ConstraintLayout>