<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/primary_blue"
    android:paddingStart="@dimen/_15sdp"
    android:paddingEnd="@dimen/_15sdp"
    tools:context=".ui.fragments.verifyphone.view.VerifyPhoneFragment">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/mulish_bold"
        android:textSize="@dimen/Heading_Text_Size"
        android:text="@string/verify_your_phone_details"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvMessageSent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/mulish_regular"
        android:textSize="@dimen/_16ssp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/message_has_been_sent"
        app:layout_constraintTop_toBottomOf="@id/tvHeading"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvMessageSentNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/mulish_bold"
        android:textSize="@dimen/_16ssp"
        android:text="75"
        app:layout_constraintTop_toBottomOf="@id/tvMessageSent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/LLCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/tvMessageSentNumber">

        <EditText
            android:id="@+id/etCode1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:inputType="number"
            android:fontFamily="@font/mulish_bold"
            android:gravity="center"
            android:textSize="@dimen/_16ssp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/ic_edittext_background"/>

        <EditText
            android:id="@+id/etCode2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:inputType="number"
            android:fontFamily="@font/mulish_bold"
            android:gravity="center"
            android:textSize="@dimen/_16ssp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/ic_edittext_background"/>

        <EditText
            android:id="@+id/etCode3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:inputType="number"
            android:fontFamily="@font/mulish_bold"
            android:gravity="center"
            android:textSize="@dimen/_16ssp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/ic_edittext_background"/>


        <EditText
            android:id="@+id/etCode4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:fontFamily="@font/mulish_bold"
            android:gravity="center"
            android:textSize="@dimen/_16ssp"
            android:background="@drawable/ic_edittext_background"/>


    </LinearLayout>

    <TextView
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="1"
        android:layout_marginBottom="@dimen/_20sdp"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/LLCode"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        android:focusable="true"
        android:textAllCaps="true"
        android:text="@string/proceed"
        android:gravity="start|center_vertical"
        android:paddingEnd="@dimen/Button_Padding_End"
        android:paddingStart="@dimen/Button_Padding_Start"
        android:drawableEnd="@drawable/ic_right_arrow_white"
        android:fontFamily="@font/mulish_bold"
        android:textColor="@color/white"
        android:textSize="@dimen/Button_Text_Size"/>

</androidx.constraintlayout.widget.ConstraintLayout>